--- a/nodejsBase/package.json
+++ b/nodejsBase/package.json
@@ -8,5 +8,8 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "events": "^3.0.0"
+  }
 }
